# mc102

./: README.md  tester.ps1
AlertaSismico/: .clang-format  .gitattributes  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
AlertaSismico/testes/: arq01.in  arq01.out  arq02.in  arq02.out  arq03.in  arq03.out  arq04.in  arq04.out  arq05.in  arq05.out  arq06.in  arq06.out  arq07.in  arq07.out  arq08.in  arq08.out  arq09.in  arq09.out  arq10.in  arq10.out
ConectandoPicos/: .editorconfig  .gitattributes  CMakeLists.txt  CMakePresets.json  main.cpp
ConectandoPicos/test_data/: arq02.in  arq03.in  arq04.in  arq05.in  arq06.in  arq07.in  arq08.in  arq09.in  arq10.in
Joomba1/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Joomba1.cpp  Joomba1.h  Joomba2.cpp  Joomba2.h  main.cpp  permutations.c  permutations.h  predio.cpp  predio.h
Joomba1/testes/: arq01.in  arq01.out  arq02.in  arq02.out  arq03.in  arq03.out  arq04.in  arq04.out  arq05.in  arq05.out  arq06.in  arq06.out  arq07.in  arq07.out  arq08.in  arq08.out  arq09.in  arq09.out  arq10.in  arq10.out
Joomba2/: README.md
Joomba2/testes/: arq01.in  arq02.in  arq03.in  arq04.in  arq05.in  arq05.out  arq06.in  arq06.out  arq07.in  arq08.in  arq09.in  arq10.in
SintetizadorDNA/: .gitignore  CMakePresets.json  CMakeUserPresets.json  main.cpp  sintetizadorDNA.cpp
